--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="js/myscript.js"></script>
     <!--My CSS-->
     <link rel="stylesheet" href="./css/style.css">
+
     <title>Restaurant</title>
 </head>
 
@@ -25,9 +25,17 @@
         </nav>
     </div>
     <div>
-        <h1>Staff Password Validator</h1>
-        <h2>Enter password: </h2>
-        <button class="button button2">Check password</button>
+        <form>
+            <h1>Staff Password Validator</h1>
+            <h2>Enter password: </h2>
+            <p id="demo"></p>
+            <input id="pass" type="text" size="8" maxlength="8"></input>
+            <input type="button" value="Check Password" onclick="chkpwd"></input>
+        </form>
+
+
+
+
     </div>
 </body>
 
