--- a/Restaurant/index2.html
+++ b/Restaurant/index2.html
@@ -7,6 +7,9 @@
     <!--My CSS-->
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="college dublin client side application" />
     <title>Restaurant</title>
@@ -34,6 +37,13 @@
         </div>
         <div id="error-messages"></div>
     </div>
+
+    <div class="container">
+        <h1 class="display-4 mt-3">Customers</h1>
+        <button class="btn btn-primary" id="myBtn">Get Data</button>
+    </div>
+    <div id="output"></div>
+    <script src="js/myscript2.js"></script>
 </body>
 
 </html>
